<resources>
    <string name="app_name" translatable="false">Fyt Extra Tool</string>
    <string name="programmer" translatable="false">Harry van der Wolf (surfer63)</string>
    <string name="btn_adboverwifiandusbdebugging">Enable adb over WiFi and enable USB debugging</string>
    <string name="adb_already_activated">ADB over TCPIP has already been enabled</string>
    <string name="add_btsettings_to_fyt_settings_text">This will add the default Bluetooth settings screen, that you are never able to access directly, into the FYT Settings apk.</string>
    <string name="add_btsettings_to_fyt_settings_title">Add default BT settings to FYT Settings.</string>
    <string name="admin_message_disabled">Device Admin : disabled</string>
    <string name="admin_message_enabled">Device Admin : enabled</string>
    <string name="android_root">Buttons with the \"#\" icon require root access</string>
    <string name="app_theme_dark">Set to Dark app theme</string>
    <string name="app_theme_light">Set to Light app theme</string>
    <string name="author">Created by</string>
    <string name="backup_finished">Backup of FYT apps finished</string>
    <string name="before_flash">In a few seconds you will see below displayed popup and your script will start.</string>
    <string name="btn_add_btsettings_to_fyt_settings">Add default BT settings to FYT Settings.</string>
    <string name="btn_app_light_dark">App theme Light/Dark</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_collect_system_info">Collect system info</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_def_android_settings">Default Android Settings screen</string>
    <string name="btn_device_info">device info</string>
    <string name="btn_device_light_dark">Set Device to Day or Night mode</string>
    <string name="btn_disp_config_txt">Display config.txt</string>
    <string name="btn_edit_config_txt">Edit config.txt</string>
    <string name="btn_engineer_mode">Open engineer mode</string>
    <string name="btn_headunit_settings">Open Head unit Settings</string>
    <string name="btn_ok">OK</string>
    <string name="btn_open_def_bt">Open default BT Settings</string>
    <string name="btn_save">Save</string>
    <string name="btn_system_info">system info</string>
    <string name="btn_zip_allappupdate">Backup FYT apps to AllAppUpdate.bin</string>
    <string name="btsettings_already_added_to_fyt_settings_text">The default Bluetooth settings are already added into the FYT Settings apk.</string>
    <string name="collected_system_info_title">Collected all system info</string>
    <string name="collected_system_info_txt">Check Internal Storage for zip file HWGetInfo.zip and folder HWGetInfo containing the collected system info.</string>
    <string name="config_txt_not_found">file config.txt does not exist or could not find file in folder /oem/app.</string>
    <string name="correct_fyt_wrong_sdk">Correct FYT, incorrect SDK</string>
    <string name="correct_fyt_wrong_sdk_message">This app is only for FYTs on real Android 10 with SDK version 29. The app will be closed.</string>
    <string name="disable_dev_admin">Disable device admin</string>
    <string name="displayed_name">App Name</string>
    <string name="enable_dev_admin">Enable device admin</string>
    <string name="exit_app">Exit</string>
    <string name="firmware_upgrade_title">Firmware flash to take place</string>
    <string name="firmware_upgrade_txt">In a few seconds you will see the popup with Start/Cancel for a \"firmware upgrade\". Click \"Start\΅ as this is necessary to apply the changes.</string>
    <string name="fytbackup_first_sentence">You will now find 4 files on the internal storage inside the folder BACKUP:</string>
    <string name="fytbackup_last_sentence_7862">If you copy these 4 files with a 6315_1.zip to a clean USB-disk, you can always restore your uis7862 (ums512) unit.</string>
    <string name="fytbackup_last_sentence_8581">If you copy these 4 files with a 6316_1.zip to a clean USB-disk, you can always restore your uis8581 (sc9863) unit.</string>
    <string name="hashmap_key">Key</string>
    <string name="hashmap_value">Value</string>
    <string name="main_message_additional">Additional text explaining why we need this permission</string>
    <string name="menuitem_about_text">About...</string>
    <string name="btn_change_pincode">Change my Pincode</string>
    <string name="menuitem_disable_pincode">Disable the Pincode</string>
    <string name="menuitem_important_props">Some important properties</string>
    <string name="btn_lock_unit">Lock my unit</string>
    <string name="btn_pin_readme">Pin: Read me!</string>
    <string name="btn_set_pincode">Set a Pincode</string>
    <string name="tab_bluetooth">Bluetooth</string>
    <string name="tab_general">General</string>
    <string name="tab_system">System</string>
    <string name="tab_lockscreen">Lockscreen</string>
    <string name="tab_settings">Settings</string>
    <string name="menu_other">Other</string>
    <string name="not_a_fyt_message">This is not a FYT unit. The app will be closed.</string>
    <string name="not_a_fyt">Not a FYT</string>
    <string name="not_applicable_abbreviation">N.A.</string>
    <string name="not_applicable_full">Not applicable</string>
    <string name="not_rooted_title">The unit is not rooted</string>
    <string name="not_rooted_text">Your unit is not rooted. This function can\'t be used.</string>
    <string name="pin_disclaimer_text">The pincode works on a unit without physical buttons. On a unit with a physical homekey on the side or the bottom, this homekey overrules the lockscreen, so the lockscreen is useless on such a unit.</string>
    <string name="pkg_name">Package name</string>
    <string name="prepare_script">The script will be prepared</string>
    <string name="reboot_text">You need to reboot your unit now to activate the change.</string>
    <string name="reboot_title">Reboot required</string>
    <string name="dialog_start_collect_system_info">Starting to collect system info. Please be patient and wait for the popup.</string>
    <string name="system_theme_day">Set system to day mode</string>
    <string name="system_theme_night">Sets system to night mode</string>
    <string name="teyes_unit_title">This is a partly incompatible Teyes unit.</string>
    <string name="teyes_unit_txt">This is a Teyes unit with \"ro.build.fytmanufacturer = 95\". The partition/flashing scheme is different. No backup possible.</string>
    <string name="the_property">property</string>
    <string name="dialog_start_zip">Starting backup. Please be patient and wait for the popup.</string>
    <string name="version">Version</string>
    <string name="website">website</string>
    <string name="menuitem_used_os_tools">Open Source tools used</string>
    <string name="used_os_tools_header">This application was made using the following Open Source tools (in alphabetical order):</string>
    <string name="fytcanbusmonitor">Start FYT Canbus monitor</string>
    <string name="m7_7870_unit_txt">This functionality can\'t be used on a 7870.</string>
    <string name="m7_7870_config_txt_not_found">file config.txt does not exist or could not find file in folder /odm/app.</string>
    <string name="btn_fytcanbusmonitor">FYT Canbus Monitor</string>
    <string name="fytcanbusmonitor_select">Select options for monitoring</string>
    <string name="fytcanbusmonitor_main">Mcu: No Canbus (necessary)</string>
    <string name="fytcanbusmonitor_canbus">CANbus</string>
    <string name="fytcanbusmonitor_sound">Sound</string>
    <string name="fytcanbusmonitor_canup">Canup</string>
    <string name="fyt_main_voltage">Voltage</string>
    <string name="fyt_main_outtemp">Outside temperature</string>
    <string name="fyt_main_speed">Speed</string>
    <string name="fyt_main_volume">Volume</string>
    <string name="btn_change_font_scale">Change System Font Scale</string>
    <string name="change_font_scale_title">Change System Font Scale</string>
    <string name="change_font_scale_info">Pull the slider left or right to change the font scaling. Press \"Save\" to apply the font scale.</string>
    <string name="change_font_scale_preview">Font Scaling</string>
    <string name="btn_battery_optimization">Battery Optimization</string>
    <string name="menuitem_check_new_version">Check for new version</string>
    <string name="version_check_popup_title">Version check result</string>
    <string name="version_check_no_access_github">No access to github.</string>
    <string name="version_check_no_access_xda">No access to XDA.</string>
    <string name="version_check_no_internet_available_title">No internet available</string>
    <string name="version_check_no_internet_available_text">Currently there is no internet available</string>
    <string name="version_check_have_internet_text">Do you have access to internet?</string>
    <string name="version_check_new_version">There is a new version available:</string>
    <string name="version_check_ask_what_to_do">Download the APK from github?, or open the post in the XDA forum?</string>
    <string name="btn_download_apk">Download apk</string>
    <string name="btn_open_xda">Open XDA</string>
    <string name="version_check_no_new_version">The local version is already the latest version:</string>
    <string name="version_check_download_complete">Download of the new xyz.hvdw.fytextratool.apk into folder Download is complete"</string>
</resources>