<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_settings"
    tools:context=".Fragment_Settings">

    <LinearLayout
        android:id="@+id/center_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dip"
        android:paddingRight="50dip"
        android:orientation="vertical">

        <Button
            android:layout_marginTop="@dimen/number_pad_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="deviceInfo"
            android:text="@string/btn_device_info" />

        <Button
            android:layout_marginTop="@dimen/number_pad_margin_top"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="systemInfo"
            android:visibility="gone"
            android:text="@string/btn_system_info" />

        <Button
            android:layout_marginTop="@dimen/number_pad_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="syusettings"
            android:text="@string/btn_headunit_settings" />

        <Button
            android:layout_marginTop="@dimen/number_pad_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="defaultandroidsettings"
            android:text="@string/btn_def_android_settings" />

        <Button
            android:layout_marginTop="@dimen/number_pad_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="engineermode"
            android:text="@string/btn_engineer_mode" />

        <Button
            android:id="@+id/adbusbdebugging"
            android:layout_marginTop="@dimen/number_pad_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="adboverwifiandusbdebugging"
            android:text="@string/btn_adboverwifiandusbdebugging"
            android:drawableLeft="@drawable/root_icon" />

        <Button
            android:id="@+id/batteryoptimization"
            android:layout_marginTop="@dimen/number_pad_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="batteryoptimization"
            android:text="@string/btn_battery_optimization" />

        <Button
            android:id="@+id/setfontsize"
            android:layout_marginTop="@dimen/number_pad_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="setFontSize"
            android:text="@string/btn_change_font_scale" />

    </LinearLayout>


</RelativeLayout>