<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dip"
        android:paddingRight="50dip">
        <CheckBox
            android:id="@+id/checkbox_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fytcanbusmonitor_main" />

        <CheckBox
            android:id="@+id/checkbox_canbus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fytcanbusmonitor_canbus" />

        <CheckBox
            android:id="@+id/checkbox_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fytcanbusmonitor_sound" />

        <CheckBox
            android:id="@+id/checkbox_canup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fytcanbusmonitor_canup" />
    </LinearLayout>
</LinearLayout>
