<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <!-- First row -->
    <TextView
        android:id="@+id/textViewVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fyt_main_voltage"
        android:layout_marginTop="@dimen/number_pad_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fyt_main_speed"
        android:layout_marginTop="@dimen/number_pad_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Second row -->
    <TextView
        android:id="@+id/textViewVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fyt_main_volume"
        android:layout_marginTop="@dimen/number_pad_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewVoltage"/>

    <TextView
        android:id="@+id/textView2_row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView2 Row2"
        android:layout_marginTop="@dimen/number_pad_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSpeed"/>

</androidx.constraintlayout.widget.ConstraintLayout>
